search in all dashboard pages, dashboard screen changes

--- a/src/app/style/sass/_base.scss
+++ b/src/app/style/sass/_base.scss
@@ -180,6 +180,9 @@ img.full-width { height: auto; }
 .secondary-btn {
   background-color: $secondary-button-color;
   color: $white-theme-color;
+  &:hover {
+    background-color: $primary-button-color;
+  }
 }
 
 .grey-button {
