--- a/src/app/views/account/dashboard/dashboard.html
+++ b/src/app/views/account/dashboard/dashboard.html
@@ -150,48 +150,45 @@
 			<h2 class="heading-text">Notifications</h2>
 			<a>
 				<div class="icon-box style1 fourty-space">
-					<i class="soap-icon-status takeoff-effect yellow-bg"></i>
+					<i class="fa fa-exclamation-circle takeoff-effect yellow-bg"></i>
 					<span class="time pull-right">JUST NOW</span>
 					<p class="box-title">Payment Made <span class="price">$120</span></p>
 				</div>
 			</a>
 			<a>
 				<div class="icon-box style1 fourty-space">
-					<i class="soap-icon-status blue-bg"></i>
+					<i class="fa fa-exclamation-circle blue-bg"></i>
 					<span class="time pull-right">10 Mins ago</span>
 					<p class="box-title">Payment Due <span class="price">$247</span></p>
 				</div>
 			</a>
 			<a>
 				<div class="icon-box style1 fourty-space">
-					<i class="soap-icon-baggage-5 red-bg"></i>
+					<i class="fa fa-suitcase red-bg"></i>
 					<span class="time pull-right">39 Mins ago</span>
 					<p class="box-title">Equipment Left the source <span class="price">Track here</span></p>
 				</div>
 			</a>
 			<a>
 				<div class="icon-box style1 fourty-space">
-					<i class="soap-icon-status takeoff-effect yellow-bg"></i>
+					<i class="fa fa-exclamation-circle takeoff-effect yellow-bg"></i>
 					<span class="time pull-right">JUST NOW</span>
 					<p class="box-title">Payment Made <span class="price">$120</span></p>
 				</div>
 			</a>
 			<a>
 				<div class="icon-box style1 fourty-space">
-					<i class="soap-icon-status blue-bg"></i>
+					<i class="fa fa-exclamation-circle blue-bg"></i>
 					<span class="time pull-right">10 Mins ago</span>
 					<p class="box-title">Payment Due <span class="price">$247</span></p>
 				</div>
 			</a>
 			<a>
 				<div class="icon-box style1 fourty-space">
-					<i class="soap-icon-baggage-5 red-bg"></i>
+					<i class="fa fa-suitcase red-bg"></i>
 					<span class="time pull-right">39 Mins ago</span>
 					<p class="box-title">Equipment Left the source <span class="price">Track here</span></p>
 				</div>
-			</a>
-			<a>
-				<div class="load-more">. . . . . . . . . . . . . </div>
 			</a>
 		</div>
 	</div>
