--- a/src/app/views/account/favorites/favorites.html
+++ b/src/app/views/account/favorites/favorites.html
@@ -1,18 +1,13 @@
 <div id="booking" class="tab-pane fade in col-padding-small col-padding-sm">
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header search-col no-padding">
 		<h1 class="no-margin skin-color seller-heading-font">Favorites</h1>
-		<div class="form-control search-div">
-			<input type="text" placeholder="Search">
-			<i class="fa fa-search"></i>
+		<div id="sb-search" class="sb-search" ng-class="{'sb-search-open': searchOpen}">
+			<form>
+				<input class="sb-search-input form-control" placeholder="Search" type="text" value="" name="search" id="search" ng-class="{'no-border': !searchOpen}">
+				<input class="sb-search-submit form-control" type="submit" value=""ng-click="searchBar()">
+				<span class="sb-icon-search form-control"ng-click="searchBar()"></span>
+			</form>
 		</div>
-		Sort By &nbsp
-		<select class="form-control sort-by">
-			<option>A-Z</option>
-			<option>Z-A</option>
-			<option>More-Less</option>
-			<option>Less-More</option>
-			<option>Currently Availbility</option>
-		</select>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 booking-history no-padding">
 		<div class="booking-info clearfix" ng-repeat="pro in mdl.favorites">
