--- a/src/app/views/seller-account/equipments/list/list.html
+++ b/src/app/views/seller-account/equipments/list/list.html
@@ -1,21 +1,14 @@
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header no-padding">
 		<h1 class="no-margin skin-color seller-heading-font">My Equipments
-			<button class="btn all-btn pull-right primary-btn" ui-sref="main.sellerAccount.equipments.add"><i class="icon soap-icon-plus"></i> Add New Equipment</button>
+			<button class="btn all-btn pull-right primary-btn btn-right" ui-sref="main.sellerAccount.equipments.add"><i class="icon soap-icon-plus"></i> Add New Equipment</button>
+			<div id="sb-search" class="sb-search" ng-class="{'sb-search-open': searchOpen}">
+				<form>
+					<input class="sb-search-input form-control" placeholder="Search" type="text" value="" name="search" id="search" ng-class="{'no-border': !searchOpen}">
+					<input class="sb-search-submit form-control" type="submit" value=""ng-click="searchBar()">
+					<span class="sb-icon-search form-control"ng-click="searchBar()"></span>
+				</form>
+			</div>
 		</h1>
-	</div>
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 search-col">
-		<div class="form-control search-div">
-			<input type="text" placeholder="Search">
-			<i class="fa fa-search"></i>
-		</div>
-		Sort By &nbsp
-		<select class="form-control sort-by">
-			<option>A-Z</option>
-			<option>Z-A</option>
-			<option>More-Less</option>
-			<option>Less-More</option>
-			<option>Currently Availbility</option>
-		</select>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 gray-area select-filter">
 		<form>
