--- a/src/app/views/seller-account/orders/list/list.html
+++ b/src/app/views/seller-account/orders/list/list.html
@@ -1,6 +1,16 @@
 
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header search-col no-padding">
 		<h1 class="no-margin skin-color seller-heading-font">Orders Received</h1>
+		<!-- <div class="dropdown pull-right btn-right">
+			<i class="fa fa-sort form-control sort-icon" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"></i>
+			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+			    <li><a href="#">Action</a></li>
+			    <li><a href="#">Another action</a></li>
+			    <li><a href="#">Something else here</a></li>
+			    <li role="separator" class="divider"></li>
+			    <li><a href="#">Separated link</a></li>
+			</ul>
+		</div> -->
 		<div class="sb-search btn-right" ng-class="{'sb-search-open': filterOpen}">
 			<form>
 				<input date-range-picker class="form-control date-picker sb-search-input" placeholder="Select Dates" type="text" ng-model="date" ng-class="{'no-border': !filterOpen}" />
@@ -47,7 +57,7 @@
 					<td class="heading-text">${{order.subtotal}}
 					</td>
 					<td>
-						<a ui-sref="main.sellerAccount.orders.view({id:order.id})" class="pull-right btn all-btn primary-btn">
+						<a ui-sref="main.sellerAccount.orders.view({id:order.id})" class="pull-right btn all-btn secondary-btn">
 							<!-- <i class="fa fa-eye" ui-sref="main.account.orders.view({id:order.id})"></i> -->
 							View
 						</a>
