--- a/src/app/views/seller-account/equipments/list/list.html
+++ b/src/app/views/seller-account/equipments/list/list.html
@@ -1,7 +1,15 @@
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header no-padding">
 		<h1 class="no-margin skin-color seller-heading-font">My Equipments
+			<div class="visible-xs">
+				<div class="pull-right mobile-icons">
+					<i class="fa fa-search orange-color pull-right" ng-click="mobilesearchBar()" style="margin-top: -20px; margin-right: 0px;"></i>
+				</div>
+				<div class="arrow_box" ng-show="mobilesearchOpen">
+					<input class="form-control" type="text" placeholder="Search">
+				</div>
+			</div>
 			<button class="btn all-btn pull-right primary-btn btn-right" ui-sref="main.sellerAccount.equipments.add"><i class="icon soap-icon-plus"></i> Add New Equipment</button>
-			<div id="sb-search" class="sb-search" ng-class="{'sb-search-open': searchOpen}">
+			<div id="sb-search" class="sb-search hidden-xs" ng-class="{'sb-search-open': searchOpen}">
 				<form>
 					<input class="sb-search-input form-control" placeholder="Search" type="text" value="" name="search" id="search" ng-class="{'no-border': !searchOpen}">
 					<input class="sb-search-submit form-control" type="submit" value=""ng-click="searchBar()">
@@ -47,14 +55,14 @@
 					<td class="text-right action-td">
 						<p>
 							<!-- <button class="btn all-btn primary-btn">View</button> -->
-							<a ui-sref="main.equiDetails({id:pro.id})">
-								<i class="fa fa-eye" ui-sref="main.equiDetails({id:pro.id})"></i>
+							<a ui-sref="main.equiDetails({id:pro.id})" class="btn small-btn secondary-btn">
+								View
 							</a>
-							<a ng-click="edit(pro)">
-								<i class="fa fa-pencil-square-o" ng-click="edit(pro)"></i>
+							<a ng-click="edit(pro)" class="btn small-btn secondary-btn">
+								Edit
 							</a>
-							<a ng-click="delete(pro)">
-								<i class="fa fa-archive" ng-click="delete(pro)"></i>
+							<a ng-click="delete(pro)" class="btn small-btn secondary-btn">
+								Delete
 							</a>
 						</p>
 						<!-- <a href="">Edit</a> -->
