--- a/src/app/views/seller-account/inquiries/list/list.html
+++ b/src/app/views/seller-account/inquiries/list/list.html
@@ -1,12 +1,24 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header search-col no-padding">
 	<h1 class="no-margin skin-color seller-heading-font">Enquiries</h1>
-	<div id="sb-search" class="sb-search" ng-class="{'sb-search-open': searchOpen}">
-				<form>
-					<input class="sb-search-input form-control" placeholder="Search" type="text" value="" name="search" id="search" ng-class="{'no-border': !searchOpen}">
-					<input class="sb-search-submit form-control" type="submit" value=""ng-click="searchBar()">
-					<span class="sb-icon-search form-control"ng-click="searchBar()"></span>
-				</form>
-			</div>
+	<!-- <div id="sb-search" class="sb-search hidden-xs" ng-class="{'sb-search-open': searchOpen}">
+		<form>
+			<input class="sb-search-input form-control" placeholder="Search" type="text" value="" name="search" id="search" ng-class="{'no-border': !searchOpen}">
+			<input class="sb-search-submit form-control" type="submit" value=""ng-click="searchBar()">
+			<span class="sb-icon-search form-control"ng-click="searchBar()"></span>
+		</form>
+	</div> -->
+	<div class="hidden-xs search-sort-div">
+		<i class="fa fa-search orange-color" ng-click="searchBar()"></i>
+		<input type="text" placeholder="Search" class="form-control hide-search" ng-class="{'show-search': searchOpen}">
+	</div>
+	<div class="visible-xs">
+		<div class="pull-right mobile-icons">
+			<i class="fa fa-search orange-color pull-right" ng-click="mobilesearchBar()"></i>
+		</div>
+		<div class="arrow_box" ng-show="mobilesearchOpen">
+			<input class="form-control" type="text" placeholder="Search">
+		</div>
+	</div>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 booking-history no-padding">
 	<div ng-repeat="item in mdl.items" class="booking-info clearfix no-lpadding no-rpadding no-bpadding">
@@ -22,7 +34,7 @@
 			<div class="comment-header clearfix">
 				<div class="review-score enquiry-buttons">
 					<a href="" class="pull-right desc-text">Mark as read</a>
-					<button class="btn pull-right all-btn view-btn primary-btn" ui-sref="main.sellerAccount.inquiries.view({id:item.id})">View</button>
+					<button class="btn pull-right small-btn view-btn secondary-btn" ui-sref="main.sellerAccount.inquiries.view({id:item.id})">View</button>
 					<!-- <a class="pull-right clickable-icon">
 						<i class="fa fa-eye"></i>
 					</a> -->
