--- a/src/app/views/seller-account/inventory/list/list.html
+++ b/src/app/views/seller-account/inventory/list/list.html
@@ -1,13 +1,18 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header no-padding">
 		<h1 class="no-margin skin-color seller-heading-font">My Inventory
-			<button class="btn all-btn pull-right primary-btn btn-right" ui-sref="main.sellerAccount.inventory.add"><i class="icon soap-icon-plus"></i> Add New Inventory</button>
-			<div id="sb-search" class="sb-search" ng-class="{'sb-search-open': searchOpen}">
-				<form>
-					<input class="sb-search-input form-control" placeholder="Search" type="text" value="" name="search" id="search" ng-class="{'no-border': !searchOpen}">
-					<input class="sb-search-submit form-control" type="submit" value=""ng-click="searchBar()">
-					<span class="sb-icon-search form-control"ng-click="searchBar()"></span>
-				</form>
+			<div class="visible-xs">
+				<div class="pull-right mobile-icons">
+					<i class="fa fa-search orange-color pull-right" ng-click="mobilesearchBar()" style="margin-top: -20px; margin-right: 0px;"></i>
+				</div>
+				<div class="arrow_box" ng-show="mobilesearchOpen">
+					<input class="form-control" type="text" placeholder="Search">
+				</div>
 			</div>
+			<div class="hidden-xs search-sort-div">
+				<i class="fa fa-search orange-color" ng-click="searchBar()"></i>
+				<input type="text" placeholder="Search" class="form-control hide-search btn-right" ng-class="{'show-search': searchOpen}">
+			</div>
+			<button class="btn all-btn pull-right primary-btn btn-right" ui-sref="main.sellerAccount.inventory.add"><i class="icon soap-icon-plus"></i> Add New Inventory</button>
 		</h1>
 </div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 gray-area select-product">
@@ -37,14 +42,14 @@
 					<td class="text-right action-td">
 						<p>
 							<!-- <button class="btn all-btn primary-btn">View</button> -->
-							<a href="">
-								<i class="fa fa-eye"></i>
+							<a href="" class="btn small-btn secondary-btn">
+								View
 							</a>
-							<a ui-sref="main.sellerAccount.inventory.edit({id:inv.id})">
-								<i class="fa fa-pencil-square-o"></i>
+							<a ui-sref="main.sellerAccount.inventory.edit({id:inv.id})" class="btn small-btn secondary-btn">
+								Edit
 							</a>
-							<a href="">
-								<i class="fa fa-archive"></i>
+							<a href="" class="btn small-btn secondary-btn">
+								Delete
 							</a>
 						</p>
 						<!-- <a href="">Edit</a> -->
@@ -75,14 +80,14 @@
 					</div>
 					<div class="col-xs-12 devider"></div>
 					<div class="col-xs-12 no-padding action pull-center cart-action">
-						<a href="" class="pull-left">
-							<i class="fa fa-eye"></i>
+						<a href="" class="pull-left btn small-btn secondary-btn">
+							View
 						</a>
-						<a ui-sref="main.sellerAccount.inventory.edit({id:inv.id})" class="text">
-							<i class="fa fa-pencil-square-o"></i>
+						<a ui-sref="main.sellerAccount.inventory.edit({id:inv.id})" class="text btn small-btn secondary-btn">
+							Edit
 						</a>
-						<a href="" class="pull-right">
-							<i class="fa fa-archive"></i>
+						<a href="" class="pull-right btn small-btn secondary-btn">
+							Delete
 						</a>
 					</div>
 				</div>
