--- a/src/app/views/seller-account/settings/additional-charges/additional-charges.html
+++ b/src/app/views/seller-account/settings/additional-charges/additional-charges.html
@@ -46,8 +46,8 @@
         </a>
     </div>
     <div class="col-xs-12" ng-if="charge.edit">
-        <button ladda="loadButton" class="btn all-btn auto-width update-btn primary-btn" ng-click="chargesMdl.update(charge)">Update</button>
-        <button class="btn all-btn auto-width primary-btn pull-right" ng-click="chargesMdl.cancelEdit(charge)">Cancel</button>
+        <button ladda="loadButton" class="btn small-btn update-btn secondary-btn" ng-click="chargesMdl.update(charge)">Update</button>
+        <button class="btn small-btn secondary-btn pull-right" ng-click="chargesMdl.cancelEdit(charge)">Cancel</button>
     </div>
     <div class="col-xs-12">
         <hr>
@@ -73,15 +73,15 @@
       <td>{{charge.item_kind}}</td>
       <td class="category">{{charge.categoryNames.join(',\n')}}</td>
       <td>
-        <a class="clickable-icon pointerhover" ng-click="chargesMdl.edit(charge)">
-          <i class="fa fa-pencil-square-o"></i>
-        </a>
+        <button class="btn small-btn secondary-btn" ng-click="chargesMdl.edit(charge)">
+          Edit
+        </button>
         <!-- <button class="btn all-btn primary-btn" ng-click="chargesMdl.edit(charge)">Edit</button> -->
       </td>
       <td>
-        <a class="clickable-icon pointerhover" ng-click="chargesMdl.delete(charge)">
-          <i class="fa fa-trash"></i>
-        </a>
+        <button class="btn small-btn secondary-btn" ng-click="chargesMdl.delete(charge)">
+          Delete
+        </button>
         <!-- <button class="btn all-btn primary-btn" ng-click="chargesMdl.delete(charge)">Delete</button> -->
       </td>
     </tr>
@@ -158,8 +158,8 @@
                 </tags-input>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-                <button ladda="loadButton" class="btn all-btn auto-width update-btn primary-btn" ng-click="chargesMdl.update(charge)">Update</button>
-                <button class="btn all-btn auto-width primary-btn" ng-click="chargesMdl.cancelEdit(charge)">Cancel</button>
+                <button ladda="loadButton" class="btn small-btn update-btn secondary-btn no-margin" ng-click="chargesMdl.update(charge)">Update</button>
+                <button class="btn small-btn secondary-btn" ng-click="chargesMdl.cancelEdit(charge)">Cancel</button>
             </div>
         </form>
     </div>
@@ -192,7 +192,7 @@
             </tags-input>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-            <button ladda="buttonLoader" class="btn all-btn auto-width primary-btn" ng-click="chargesMdl.add()">Add</button>
+            <button ladda="buttonLoader" class="btn small-btn secondary-btn" ng-click="chargesMdl.add()">Add</button>
         </div>
     </form>
 
