--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -260,7 +260,7 @@
 					<div class="col-xs-12 col-sm-6 col-md-3 landing-img-carousel" ng-repeat="product in mdl.recent | limitTo:4">
 						<article class="box">
 							<figure>
-								<a href="#" title="" class="hover-effect"><img src="http://dummyimage.com/270x160/afafaf/ffffff.png&text=No+Image+Found" alt=""></a>
+								<a href="#" title="" class="hover-effect"><img ng-src='http://dummyimage.com/270x160/afafaf/ffffff.png&text=No+Image+Found' alt=""></a>
 							</figure>
 							<div class="details">
 								<h4 class="box-title">{{product.name}}</h4>
@@ -299,7 +299,7 @@
 					<div class="col-xs-12 col-sm-6 col-md-3 landing-img-carousel" ng-repeat="product in mdl.recent.slice(4, mdl.recent.length) | limitTo:4">
 						<article class="box">
 							<figure>
-								<a href="#" title="" class="hover-effect"><img src=”http://dummyimage.com/270x160/afafaf/ffffff.png&text=No+Image+Found” /></a>
+								<a href="#" title="" class="hover-effect"><img ng-src='http://dummyimage.com/270x160/afafaf/ffffff.png&text=No+Image+Found' /></a>
 							</figure>
 							<div class="details">
 								<h4 class="box-title">{{product.name}}</h4>
@@ -343,7 +343,7 @@
 						<div class="col-xs-12 col-sm-4 col-md-3 landing-img-carousel">
 							<article class="box">
 								<figure>
-									<a href="#" title="" class="hover-effect"><img src="http://placehold.it/270x160" alt=""></a>
+									<a href="#" title="" class="hover-effect"><img ng-src='http://dummyimage.com/270x160/afafaf/ffffff.png&text=No+Image+Found' alt=""></a>
 								</figure>
 								<div class="details">
 									<h4 class="box-title">{{product.name}}</h4>
