--- a/src/app/views/account/favorites/favorites.html
+++ b/src/app/views/account/favorites/favorites.html
@@ -14,7 +14,10 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 booking-history no-padding">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
+		<hr />
+	</div>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding list-view">
 		<div class="booking-info clearfix" ng-repeat="pro in mdl.favorites">
 			<div class="date">
 				<a class="hover-effect popup-gallery">
