--- a/src/app/views/account/inquiries/list/list.html
+++ b/src/app/views/account/inquiries/list/list.html
@@ -14,7 +14,10 @@
 		</div>
 	</div>
 </div>
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 booking-history no-padding">
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
+	<hr />
+</div>
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding list-view">
 	<div ng-repeat="item in mdl.items" class="booking-info clearfix no-lpadding no-rpadding no-bpadding">
 		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 enquiry-name no-padding">
 			<p class="name heading-text">Jessica Brown</p>
