--- a/src/app/views/account/jobsites/list/list.html
+++ b/src/app/views/account/jobsites/list/list.html
@@ -15,7 +15,10 @@
 		</div>
 	</h1>
 </div>
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 booking-history no-padding">
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
+	<hr />
+</div>
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding list-view">
 	<div class="booking-info clearfix" ng-repeat="site in mdl.sites">
 		<h4 class="box-title">
 			<i class="icon soap-icon-departure yellow-color circle"></i>{{site.name}}
