equipment detail responsive

--- a/src/app/style/sass/_base.scss
+++ b/src/app/style/sass/_base.scss
@@ -152,6 +152,10 @@ img.full-width { height: auto; }
 .primary-btn {
   background-color: $primary-button-color;
   color: $white-theme-color;
+  &:focus {
+    background-color: $primary-button-color;
+    color: $white-theme-color;
+  }
 }
 
 
